# source-sdk-2013

./: .clang-format  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  CHECKLIST.md  CI_IMPROVEMENTS.md  CODING_STYLE.md  DAY_4_RUNTIME_INTEGRATION.md  DAY_5_SSAO_AND_PBR_PLANNING.md  FORMATTING_STRATEGY.md  GOLDEN_CONTENT.md  PBR_INTEGRATION_PLAN.md  PBR_MATERIALS_GUIDE.md  PHASE_0_WEEK_1.md  SHADER_BUILD_INTEGRATION.md  SSAO_IMPLEMENTATION.md  VERIFICATION_STRATEGY.md
game/mod_tf/materials/models/props/: pbr_template.vmt
game/mod_tf/materials/models/props/examples/: plastic_glossy.vmt  steel_polished.vmt  wood_oak.vmt
src/engine_bridge/: CMakeLists.txt  console_bridge.cpp  console_bridge.h  filesystem_bridge.cpp  filesystem_bridge.h  materialsystem_bridge.cpp  materialsystem_bridge.h
src/framework/: CMakeLists.txt  color_grading.cpp  color_grading.h  math_extra.cpp  math_extra.h  serialization.cpp  serialization.h  string_utils.cpp  string_utils.h
src/materialsystem/stdshaders/: common_ps_fxc.h  lightmappedgeneric_dx9_helper.cpp  sdkshaders_dx9_20b.txt
src/public/tier0/: platform.h
src/tools/: CMakeLists.txt
tests/: CMakeLists.txt  test_color_grading.cpp  test_string_utils.cpp  test_string_utils_advanced.cpp
